--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,9 @@
   I build iOS and Mac apps, such as [Deckset](http://www.decksetapp.com). It's a Mac app that lets you create beautiful presentations, straight from Markdown.
   
   In 2013, I started [objc.io](http://objc.io), a magazine for iOS developers. Every month, we release a new issue with a different topic.
-  Also, that year I organized the first edition of [UIKonf](http://www.uikonf.com). It's an independent conference for serious iOS developers, in Berlin. I sometimes speak at conferences, [here](https://github.com/chriseidhof/speaking)'s an incomplete list of my recent talks.
+  Also, that year I organized the first edition of [UIKonf](http://www.uikonf.com). It's an independent conference for serious iOS developers, in Berlin. I sometimes speak at conferences, [here](https://github.com/chriseidhof/speaking)'s an incomplete list of my recent talks. 
+  
+  If you find mistakes in this site, feel free to make a pull request on [the github repo](https://github.com/chriseidhof/chris.eidhof.nl).
 
   Write to me: chris@*my lastname*.nl.
   {% endfilter %}
