Link to sample project

--- a/pages/drafts/intentions.html
+++ b/pages/drafts/intentions.html
@@ -74,7 +74,7 @@ Now, all of this is very simple. The view controller is just under 50 lines. How
 
 The idea of the article mentioned in the introduction is to take lighter view controllers to a whole new level. A view controller should only do work in the `viewDid*` methods, not implement any extra protocols, and not have any `IBActions`. That sounded pretty extreme to me, but I wanted to give it a try and see what it feels like.
 
-I created a sample project of the things below, and put [on github](TODO).
+I created a sample project of the things below, and put [on github](https://github.com/chriseidhof/intentions).
 
 ### Dismiss on Enter
 
