Added a real email address with link

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
   
   If you find mistakes in this site, feel free to make a pull request on [the github repo](https://github.com/chriseidhof/chris.eidhof.nl).
 
-  Write to me: chris@*my lastname*.nl.
+  Write to me: [chris@eidhof.nl](mailto:chris@eidhof.nl).
   {% endfilter %}
   
   {% block footer %}
