--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,8 @@
   I'm Chris Eidhof. Dutch, and living in Berlin.
   
   I build iOS and Mac apps, such as [Deckset](http://www.decksetapp.com). It's a Mac app that lets you create beautiful presentations, straight from Markdown.
+
+  Currently, I'm working on a book: [Functional Programming in Swift](http://www.objc.io/books/).
   
   In 2013, I started [objc.io](http://objc.io), a magazine for iOS developers. Every month, we release a new issue with a different topic.
   Also, that year I organized the first edition of [UIKonf](http://www.uikonf.com). It's an independent conference for serious iOS developers, in Berlin. I sometimes speak at conferences, [here](https://github.com/chriseidhof/speaking)'s an incomplete list of my recent talks. 
