--- a/pages/about.html
+++ b/pages/about.html
@@ -12,10 +12,10 @@
   
   I build iOS and Mac apps, such as [Deckset](http://www.decksetapp.com). It's a Mac app that lets you create beautiful presentations, straight from Markdown.
 
-  Currently, I'm working on a book: [Functional Programming in Swift](http://www.objc.io/books/).
+  Recently, I wrote a book: [Functional Programming in Swift](http://www.objc.io/books/).
   
   In 2013, I started [objc.io](http://objc.io), a magazine for iOS developers. Every month, we release a new issue with a different topic.
-  Also, that year we started [UIKonf](http://www.uikonf.com). It's an independent conference for serious iOS developers, in Berlin. I sometimes speak at conferences, [here](https://github.com/chriseidhof/speaking)'s an incomplete list of my recent talks. 
+  Also, that year we started [UIKonf](http://www.uikonf.com). It's an independent conference for serious iOS developers, in Berlin, which is now run by other people. I sometimes speak at conferences, [here](https://github.com/chriseidhof/speaking)'s an incomplete list of my recent talks. 
   
   If you find mistakes in this site, feel free to make a pull request on [the github repo](https://github.com/chriseidhof/chris.eidhof.nl).
 
