--- a/pages/about.html
+++ b/pages/about.html
@@ -10,12 +10,12 @@
   {% filter markdown %} 
   I'm Chris Eidhof. Dutch, and living in Berlin.
   
-  I build iOS and Mac apps, such as [Deckset](http://www.decksetapp.com). It's a Mac app that lets you create beautiful presentations, straight from Markdown.
+  I build iOS and Mac apps. In 2014, we released [Deckset](http://www.decksetapp.com). It's a Mac app that lets you create beautiful presentations, straight from Markdown. In 2015, we built [Scenery](http://www.getscenery.com), which lets you present your app designs using great photography.
 
-  Recently, I wrote a book: [Functional Programming in Swift](http://www.objc.io/books/).
+  Last year, I wrote a book: [Functional Programming in Swift](http://www.objc.io/books/fpinswift). This year, I'm writing a new book called [Advanced Swift](http://www.objc.io/books/advanced-swift).
   
-  In 2013, I started [objc.io](http://objc.io), a magazine for iOS developers, together with my friends Florian and Daniel. Every month, we release a new issue with a different topic.
-  Also, that year we started [UIKonf](http://www.uikonf.com). It's an independent conference for serious iOS developers, in Berlin, which is now run by other people. I like speaking at conferences and meetups, [here](https://github.com/chriseidhof/speaking)'s a list of recent talks.
+  In 2013, I started [objc.io](http://objc.io), a magazine for iOS developers, together with my friends Florian and Daniel. For two years, we released a new issue every month.
+  Also, that year we started [UIKonf](http://www.uikonf.com). It's an independent conference for serious iOS developers, in Berlin, which is now run by other people. I enjoy speaking at conferences and meetups, [here](https://github.com/chriseidhof/speaking)'s a list of recent talks.
   
   If you find mistakes in this site, feel free to make a pull request on [the github repo](https://github.com/chriseidhof/chris.eidhof.nl).
 
