--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,7 @@
 
   <footer id="about-me">
   {% filter markdown %} 
-  I'm Chris Eidhof. I build iOS and Mac apps, such as [Deckset](http://www.decksetapp.com). I created [objc.io](http://objc.io), started [UIKonf](http://www.uikonf.com) and wrote [Functional Programming in Swift](http://www.objc.io/books/). More [about me](/about.html).
+  I'm Chris Eidhof. I build iOS and Mac apps, such as [Deckset](http://www.decksetapp.com) and [Scenery](http://www.getscenery.com). I created [objc.io](http://objc.io), started [UIKonf](http://www.uikonf.com) and wrote [Functional Programming in Swift](http://www.objc.io/books/fpinswift) and [Advanced Swift](http://www.objc.io/books/advanced-swift). More [about me](/about.html).
   {% endfilter %}
   </footer>
   
